--- a/dylensmith-web/Views/web.config
+++ b/dylensmith-web/Views/web.config
@@ -16,7 +16,7 @@
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
-        <add namespace="dylensmith_web" />
+        <add namespace="DS.Web" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
