--- a/dylensmith-web/Web.config
+++ b/dylensmith-web/Web.config
@@ -11,6 +11,13 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+	<system.net>
+		<mailSettings>
+			<smtp from="website@dylensmith.com">
+				<network host="localhost" port="25" />
+			</smtp>
+		</mailSettings>
+	</system.net>
   <system.web>
     <compilation debug="true" targetFramework="4.5.1" />
     <httpRuntime targetFramework="4.5.1" />
